<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.16</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>pn.torn</groupId>
    <artifactId>golden-eye</artifactId>
    <version>1.4.1</version>
    <name>golden-eye</name>
    <description>金蝶独家官方认证</description>

    <properties>
        <java.version>21</java.version>
        <websocket.version>2.1.5</websocket.version>
        <jsoup.version>1.17.2</jsoup.version>
        <loki.version>2.0.0</loki.version>
        <mybais.version>3.0.3</mybais.version>
        <mp.version>3.5.12</mp.version>
        <feishu.version>2.4.23</feishu.version>
    </properties>

    <dependencies>
        <!-- SpringBoot基础 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>

        <!-- 单元测试 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- WebFlux -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webflux</artifactId>
        </dependency>

        <!-- Json -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-json</artifactId>
        </dependency>

        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>

        <!-- Pgsql -->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
        </dependency>

        <!-- Liquibase -->
        <dependency>
            <groupId>org.liquibase</groupId>
            <artifactId>liquibase-core</artifactId>
        </dependency>

        <!-- Spring缓存管理 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-cache</artifactId>
        </dependency>

        <!-- Caffeine缓存 -->
        <dependency>
            <groupId>com.github.ben-manes.caffeine</groupId>
            <artifactId>caffeine</artifactId>
        </dependency>

        <!-- Web Socket -->
        <dependency>
            <groupId>org.glassfish.tyrus.bundles</groupId>
            <artifactId>tyrus-standalone-client</artifactId>
            <version>${websocket.version}</version>
        </dependency>

        <!-- Jsoup -->
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>${jsoup.version}</version>
        </dependency>

        <!-- Loki 日志采集 -->
        <dependency>
            <groupId>com.github.loki4j</groupId>
            <artifactId>loki-logback-appender</artifactId>
            <version>${loki.version}</version>
        </dependency>

        <!-- Mybatis ORM框架 -->
        <dependency>
            <groupId>org.mybatis</groupId>
            <artifactId>mybatis-spring</artifactId>
            <version>${mybais.version}</version>
        </dependency>

        <!-- Mybatis Plus ORM框架 -->
        <dependency>
            <groupId>com.baomidou</groupId>
            <artifactId>mybatis-plus-boot-starter</artifactId>
            <version>${mp.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.mybatis</groupId>
                    <artifactId>mybatis-spring</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- Mybatis Plus 部分插件 -->
        <dependency>
            <groupId>com.baomidou</groupId>
            <artifactId>mybatis-plus-jsqlparser</artifactId>
            <version>${mp.version}</version>
        </dependency>

        <!-- 飞书SDK -->
        <dependency>
            <groupId>com.larksuite.oapi</groupId>
            <artifactId>oapi-sdk</artifactId>
            <version>${feishu.version}</version>
        </dependency>

        <!-- Redis -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-redis</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <excludedGroups>shared-db</excludedGroups>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>shared-db-test</id>
            <properties>
                <shared.db.tests>OcBenefitQueryStrategyImplTest,OcPlanningRewardStatsMapperTest,TornFactionOcBenefitMapperTest,TornAttackLogMapperTest,TornStocksHistoryMapperTest,TornBaseDataServiceTest,TornOcBatchIncomeQueryCountTest,TornOcBatchIncomeReentrancyTest,TornOcBatchIncomeServiceTest,TornOcIncomeServiceTest,TornOcIncomeTransactionWorkerTest,StockEventBatchIdempotencyItTest,StockShadowTrackEndToEndItTest,TornStockCandidateShadowMapperTest,TornStockDynamicShadowMarkTest,TornStockMonthlyStateAutoConfirmMapperTest,TornStockMonthlyStateMapperTest,TornStockPortfolioSlotInitMapperTest,TornStockSignalEventTheoreticalExitDataTest,TornStockStrategyFeature15mMapperTest,StockReplayReadOnlyGuardTest</shared.db.tests>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <test>${shared.db.tests}</test>
                            <excludedGroups>shared-db-default-disabled</excludedGroups>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>